--- a/style/style.css
+++ b/style/style.css
@@ -186,6 +186,17 @@
                 background: #FC4A1A;
                 color:#FFF;
             }
+            main button {
+                font-size: 5vw;
+                color: #FFF;
+                border-radius: 5px;
+            }
+            #confirm {
+                background: #4ACC4A;
+            }
+            #reset {
+                background: #CC4A4A;
+            }
             footer {
                 background-color: #FC4A1A;
                 font-size: 18px;
@@ -268,6 +279,9 @@
                     box-shadow:0 0 12px 0 rgba(0,0,0,0.5),5px 12px 15px 5px rgba(0,0,0,0.15); 
                     margin: 12px 15px 10px 18px;
                     grid-gap: 10px;
+                }
+                main button {
+                    font-size: 30px;
                 }
     
             }
