--- a/style/style.css
+++ b/style/style.css
@@ -126,7 +126,7 @@
             }
 
             .profcard {
-                background: url("../blob/master/img/card.jpg") center no-repeat;
+                background: url("https://raw.githubusercontent.com/vvorobets/ui-ux/master/img/card.jpg") center no-repeat;
                 background-size: 100%;
                 max-width:600px;
                 max-height: 360px;
